UX: Fix layout issues with long category names

--- a/app/assets/stylesheets/common/d-editor.scss
+++ b/app/assets/stylesheets/common/d-editor.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  max-width: 100%;
 }
 
 .d-editor-textarea-wrapper {
